--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -75,27 +75,25 @@ button {
 }
 
 .nested-comments {
-  padding-left: .7rem;
+  margin-left: .7rem;
   flex-grow: 1;
 }
 
-.nested-comments-stack {
+.nested-comment-stack {
   display: flex;
-  align-items: stretch
+  flex-direction: row;
+  position: relative;
 }
 
 .collapse-line {
   border: none;
   background: none;
-  height: 100%;
   width: 15px;
-
   margin-top: .5rem;
-  position: relative;
   cursor: pointer;
   outline: none;
-  transform: translateX(-50%);
-  display: flex;
+  /* display: flex; 
+  align-items: stretch; */
 }
 
 .collapse-line:hover::before,
@@ -106,11 +104,10 @@ button {
 .collapse-line::before {
   content: "";
   position: absolute;
-  top: 0;
+  top: 5px;
   bottom: 0;
-  left: 50%;
-  width: 1px;
-
+  left: 10px;
+  width: .5px;
   background-color: hsl(235, 93%, 49%);
   transition: background-color 100ms ease-in-out;
 }
